# soldr-toolchain

./: .forge-ingest.log.jsonl  .gitattributes  .gitignore  CLAUDE.md  README.md  asset-index.json  catalogue.v1.json  index.html  managed-rust-tools.json  manifest.json  pyproject.toml  rust-nightly-versions.v1.json
.github/workflows/: catalogue-schema.yml  forge-dispatch.yml  forge-ingest.yml  refresh-manifest.yml  tests.yml
apple-sdk/: manifest.json
cargo-binstall/: manifest.json
cargo-chef/: manifest.json
cargo-nextest/: manifest.json
cargo-xwin/: manifest.json
cargo-zigbuild/: manifest.json
conan-core/: manifest.json
crgx/: manifest.json
docs/: ASSET_CATALOG.md
examples/: catalogue.v1.json
recipes/: __init__.py  _apple_sdk_thin.py  _cmake.py  _mingw_w64_gcc.py  _ninja.py  _openssl_firedaemon.py  _python_pbs.py  _rust_cli.py  _syslib.py  _uv.py
recipes/apple-sdk-thin-aarch64/: README.md  conanfile.py
recipes/apple-sdk-thin-x86_64/: README.md  conanfile.py
recipes/apple-sdk-universal2/: README.md  conanfile.py
recipes/bzip2-darwin-arm64/: README.md  conanfile.py
recipes/bzip2-darwin-x64/: README.md  (+1 more)
schemas/: catalogue.v1.schema.json
scripts/: __init__.py  batch_ingest_syslibs.py  blob_store.py  build_asset_index.py  build_catalogue_v1.py  build_manifest.py  build_retention_set.py  build_rust_nightly_versions.py  build_site.py  build_zig_manifest.py  convert_v5_to_v1.py  dispatch_forge_extras.sh  dispatch_forge_syslibs.sh  forge_to_catalogue.py  generate_syslib_recipes.py  ingest_forge_rust_run.py  lint_assets.py  lint_python_import_paths.py  tool_query.py  validate_catalogue.py  validate_rust_tools.py
tests/: test_apple_sdk_manpages.py  test_blob_store.py  test_build_asset_index.py  test_build_catalogue_v1.py  test_build_manifest.py  test_build_rust_nightly_versions.py  test_build_zig_manifest.py  test_convert_v5_to_v1.py  test_forge_to_catalogue.py  test_lint_assets.py  test_lint_python_import_paths.py  test_parity.py  test_prebuilt_recipes.py  test_recipe_extract_prefix.py  test_syslib.py  test_tool_query.py  test_validate_rust_tools.py  test_xwin_cache_recipe.py
xwin-cache/: manifest.json
zccache/: manifest.json
zig/: manifest.json
(+294 files in other folders)
